--- a/Project_with_car/Quattroporte.html
+++ b/Project_with_car/Quattroporte.html
@@ -1,43 +1,120 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Проект про машины</title>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href="css/style.css"/>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-        <script src="js/script.js" type="text/jscript"></script>
-    </head>
-    <body>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap 101 Template</title>
+
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+<![endif]-->
+</head>
+
+<body>
+    <div class="container">
         <div id="wrapper">
-            <header><img src="images/Header.png" title = "header" alt = "Шапка"/></header>
-            <div id="main">
-                <nav>
-                    <ul>
-                        <li><a href="index.html" title = "На главную"><img src="images/Logo.jpg" title="Главная" alt="лого"/></a></li>
-                        <li><a href="Ghibli.html" title = "Ghibli"><p>Ghibli</p></a></li>
-                        <li><a href="Quattroporte.html" title = "Quattroporte"><p>Quattroporte</p></a></li>
-                        <li><a href="GranTuristo.html" title = "GranTuristo"><p>GranTuristo</p></a></li>
-                    </ul>
-                    <div id="map"><img src="images/Map.jpg" alt="map"/></div>
-                </nav>
-                <div id="content">
-                <table>
-                     <tr>
-                         <th id="main_title" colspan="3"><h1>Quattroporte</h1></th>
-                     </tr>
-                     <tr class="big_pic">
-                         <td colspan="3"><img id="preview" src="images/Quattroporte.png" alt="Превью"/></td>
-                     </tr>
-                     <tr class="small_pic">
-                         <td><img onclick="changeImage(this.src)" src="images/Quattroporte.png" alt="Перед"/></td>
-                         <td><img onclick="changeImage(this.src)" src="images/Quattroporte-2.png" alt="Бок"/></td>
-                         <td><img onclick="changeImage(this.src)" src="images/Quattroporte-3.jpg" alt="Внутри"/></td>
-                     </tr>
-                 </table>
+            <img id="img" src="images/Header.png" alt="Шапка" title="header">
+
+            <!--Основной контент-->
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1 col-sm-10 col-sm-offset-1">
+                    <div class="row">
+
+                        <!-- Меню -->
+                        <div class="col-lg-3 col-sm-3">
+                            <nav>
+                                <ul>
+                                    <li>
+                                        <a href="index.html" title="На главную"><img src="images/Logo.jpg" title="Главная" alt="лого" /></a>
+                                    </li>
+                                    <li>
+                                        <a href="Ghibli.html" title="Ghibli">
+                                            <p>Ghibli</p>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="Quattroporte.html" title="Quattroporte">
+                                            <p>Quattroporte</p>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="GranTuristo.html" title="GranTuristo">
+                                            <p>GranTuristo</p>
+                                        </a>
+                                    </li>
+                                </ul>
+                                <div id="map"><img src="images/Map.jpg" alt="map" /></div>
+                            </nav>
+                        </div>
+
+                        <div class="col-lg-9 col-sm-9">
+                            <div class="row">
+                                <div class="col-lg-12 col-sm-12">
+                                    <div class="main_title">
+                                        <h1>Quattroporte</h1>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-lg-12 col-sm-12">
+                                    <div class="big_pic">
+                                        <img id="preview" src="images/Quattroporte.png" alt="Превью" />
+                                        <!--<span class="glyphicon glyphicon-forward"></span>-->
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-4 col-sm-4 col-xs-4">
+                                    <div class="small_pic">
+                                        <img onclick="changeImage(this.src)" src="images/Quattroporte.png" alt="Перед" />
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 col-sm-4 col-xs-4">
+                                    <div class="small_pic">
+                                        <td><img onclick="changeImage(this.src)" src="images/Quattroporte-2.png" alt="Бок" />
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 col-sm-4 col-xs-4">
+                                    <div class="small_pic">
+                                        <img onclick="changeImage(this.src)" src="images/Quattroporte-3.jpg" alt="Внутри" />
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
                 </div>
-                <div style="clear: both;"></div>
             </div>
-            <footer><h2>Copyright</h2></footer>
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1 col-sm-10 col-sm-offset-1">
+                    <div class="row">
+                        <div class="col-lg-12 col-sm-12">
+                            <footer>
+                                <h2>Copyright</h2>
+                            </footer>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-    </body>
+    </div>
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/script.js" type="text/jscript"></script>
+    <script src="js/bootstrap.js"></script>
+
+</body>
+
 </html>
